--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install kubectl
       uses: azure/setup-kubectl@v2.0
       with:
-        version: 'v1.24.0' # default is latest stable
+        version: 'v1.25.0' # default is latest stable
       id: install
 
     - name: Configure AWS Credentials
@@ -39,7 +39,7 @@ jobs:
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name dev-test
+      run: aws eks update-kubeconfig --name test1-dev1-cluster
     
     - name: Deploy to EKS
       run: |
