--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -43,5 +43,6 @@ jobs:
     
     - name: Deploy to EKS
       run: |
-        kubectl apply -f deployment.yaml
-        kubectl apply -f service.yaml
+        kubectl create namespace test
+        kubectl apply -f deployment.yaml -n test
+        kubectl apply -f service.yaml -n test
