--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: test
+  name: test1
   labels:
-    app: test
+    app: test1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: test
+      app: test1
   template:
     metadata:
       labels:
-        app: test
+        app: test1
     spec:
       containers:
         - name: test
-          image: 924144197303.dkr.ecr.us-east-2.amazonaws.com/test
+          image: 924144197303.dkr.ecr.us-east-2.amazonaws.com/test:1.1
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
