--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -43,6 +43,6 @@ jobs:
     
     - name: Deploy to EKS
       run: |
-        kubectl create namespace test
-        kubectl apply -f deployment.yaml -n test
-        kubectl apply -f service.yaml -n test
+        kubectl create namespace test1
+        kubectl apply -f deployment.yaml -n test1
+        kubectl apply -f service.yaml -n test1
