--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test
+  name: test1
 spec:
   selector:
-    app: test
+    app: test1
   ports:
     - protocol: TCP
       port: 80
